--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -1,33 +1,20 @@
 FROM alpine:latest
+MAINTAINER Vdescham <vdescham@student.42.fr>
 
-ENV TIMEZONE Europe/Paris
-ENV VERSION_WORDPRESS 4.9.6
-ENV APACHE_SERVER_PATH /var/www/localhost/htdocs
+# Install Wordpress and dependencies
+RUN apk update \
+&& apk add php7 php7-fpm php7-opcache \
+php7-gd php7-mysqli php7-zlib php7-curl \
+php7-mbstring php7-json php7-session
 
-# Installing dependencies
-RUN apk add --no-cache --virtual .build-deps unzip
-RUN apk add --no-cache apache2 php7 php7-apache2 php7-openssl php7-xml php7-pdo php7-mcrypt php7-session php7-mysqli php7-zlib su-exec
-RUN mkdir -p /run/apache2 /run/httpd
+RUN wget https://wordpress.org/latest.tar.gz \
+&& tar -xvf latest.tar.gz \
+&& rm latest.tar.gz \
+&& mkdir /www \
+&& mv wordpress/ www/
 
-# Work path
-WORKDIR /scripts
+ADD ./setup.sh 			/srcs/setup.sh
 
-# Download & install wordpress
-ADD https://wordpress.org/latest.zip ./
-RUN unzip -q wordpress-${VERSION_WORDPRESS}.zip -d ./ && \
-	  rm -rf ${APACHE_SERVER_PATH} && \
-	  mv wordpress/ ${APACHE_SERVER_PATH} && \
-	  rm /scripts/wordpress-${VERSION_WORDPRESS}.zip \
-		  ${APACHE_SERVER_PATH}/wp-config-sample.php \
-		  ${APACHE_SERVER_PATH}/license.txt \
-		  ${APACHE_SERVER_PATH}/readme.html && \
-	  chown -R apache:apache ${APACHE_SERVER_PATH} && \
-	  apk del .build-deps
+EXPOSE 5050
 
-# Copy of the HTTPD startup script
-COPY scripts/start.sh start.sh
-COPY files/wp-config.php ${APACHE_SERVER_PATH}/wp-config.php
-
-EXPOSE 80
-
-ENTRYPOINT [ "./start.sh" ]
+CMD ["sh", "/srcs/setup.sh"]
