--- a/srcs/kubernetes/ftps.yaml
+++ b/srcs/kubernetes/ftps.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: ftps
-        image: alpine_ftps
+        image: ftps
         imagePullPolicy: Never
         env:
         - name: USER
