--- a/srcs/ftps/Dockerfile
+++ b/srcs/ftps/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:latest
 MAINTAINER Vdescham <vdescham@student.42.fr>
 
-# Install FTPS and depend.s
+# Install FTPS and dependencies
 RUN apk update \
 && apk add vsftpd && apk add openssl curl
 
@@ -10,7 +10,7 @@ ADD ./setup.sh				/srcs/setup.sh
 ADD ./liveness.sh			/srcs/liveness.sh
 
 # CONFIG OPENSSL
-RUN openssl req -x509 -nodes -subj '/C=FR/ST=PARIS/L=PARIS/O=jereligi/CN=localhost' \
+RUN openssl req -x509 -nodes -subj '/C=FR/ST=PARIS/L=PARIS/O=vdescham/CN=localhost' \
 		-days 365 -newkey rsa:2048 -keyout /etc/ssl/private/vsftpd.key \
 		 -out /etc/ssl/certs/vsftpd.crt
 
