--- a/srcs/kubernetes/nginx.yaml
+++ b/srcs/kubernetes/nginx.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
+  name: nginx-deployment
   labels:
     app: nginx
 spec:
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx
+        image: nginx_container
         imagePullPolicy: Never
         env:
           - name: USER
@@ -28,6 +28,8 @@ spec:
               secretKeyRef:
                 name: k8s-secret
                 key: ssh_password
+          - name: WPPORT
+            value: wordpress-service.default.svc.cluster.local
         livenessProbe:
           exec:
             command:
