--- a/srcs/phpmyadmin/Dockerfile
+++ b/srcs/phpmyadmin/Dockerfile
@@ -6,7 +6,8 @@ RUN apk update && apk add openrc \
 && apk add wget php7 php7-fpm \
 php7-opcache php7-gd php7-mysqli \
 php7-zlib php7-curl php7-mbstring \
-php7-json php7-session
+php7-json php7-session \
+nginx
 
 RUN wget http://files.directadmin.com/services/all/phpMyAdmin/phpMyAdmin-5.0.2-all-languages.tar.gz \
 && tar zxvf phpMyAdmin-5.0.2-all-languages.tar.gz \
