--- a/srcs/kubernetes/influxdb.yaml
+++ b/srcs/kubernetes/influxdb.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - name: influxdb
-        image: influxdb
+        image: influxdb_container
         imagePullPolicy: Never
         env:
         - name: INFLUXDB_NAME
