--- a/srcs/config/secret_key.yaml
+++ b/srcs/config/secret_key.yaml
@@ -3,14 +3,12 @@ kind: Secret
 metadata:
   name: k8s-secret
 type: Opaque
-data:
-  ssh_user: c3NoX3VzZXI=
-  ssh_password: cGFzc3dvcmQ=
-  wp_db: d29yZHByZXNz
-  wp_user: d3BfdXNlcg==
-  wp_password: cGFzc3dvcmQ=
-  influxdb_db_name: aW5mbHV4ZGI=
-  influxdb_user: aW5mbHV4ZGJfdXNlcg==
-  influxdb_password: cGFzc3dvcmQ=
-  ftps_user: ZnRwc191c2Vy
-  ftps_password: cGFzc3dvcmQ=
+stringData:
+  mysql_admin: admin
+  mysql_admin-password: admin
+  mysql_db-user: user
+  mysql_db_password: password
+  wp_db_name: ft_services
+  wp_table_prefix: ft_
+  ssh_user: user
+  ssh_password: password
