No risk losing it all this time

--- a/ft_services/srcs/ftps/Dockerfile
+++ b/ft_services/srcs/ftps/Dockerfile
@@ -5,8 +5,8 @@ RUN apk update && apk add openssl \
 	&& apk add gettext \
 	&& rm -rf /var/cache/apk/*
 
-ENV __FTP_USER__=user
-ENV __FTP_PASSWORD__=password
+ENV __FTPS_USER__=user
+ENV __FTPS_PASSWORD__=password
 ENV __CLUSTER_IP__=172.17.0.2
 
 COPY ./srcs/vsftpd.conf /tmp/vsftpd.conf
