--- a/ft_services/srcs/ftps/srcs/vsftpd.conf
+++ b/ft_services/srcs/ftps/srcs/vsftpd.conf
@@ -148,7 +148,7 @@ allow_anon_ssl=NO
 force_local_data_ssl=YES
 force_local_logins_ssl=YES
 
-# Certains clients FTP nécessitent cette ligne
+# Some FTP client need this line
 require_ssl_reuse=NO
 
 ssl_tlsv1=YES
